# InovonicsPythonApp

./: .dockerignore  .env.example  .gitignore  App.py  Dockerfile  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
src/inovonics_python_app/: README.md  __init__.py  __main__.py  config.py  home_assistant.py  mqtt_app.py  version.py
tests/: README.md  test_config.py  test_home_assistant.py
